Promise yarattık, promise resolve olduktan sonra .then() methoduyla getposts fonksiyonunu çağırdık

--- a/Untitled-5.html
+++ b/Untitled-5.html
@@ -3,6 +3,6 @@
 
     </head>
     <body>
-        <script src="program.js"></script>
+        <script src="promises.js"></script>
     </body>
 </html>
